syntax = "proto3";

package machina.serving.test_util;

// Config proto for StoragePathErrorInjectingSourceAdapter.
message StoragePathErrorInjectingSourceAdapterConfig {
  // The error message the adapter emits.
  string error_message = 1;
}
